2018-08-11  Kirit Saelensminde  <kirit@felspar.com>
 Implemented some initial basic checks that should be a useful start.