@@ -1,2 +1,4 @@
 add_subdirectory(checks)
 add_subdirectory(headers)
+add_subdirectory(stress)
+
